# ClawFlow

./: .gitignore  README.md  pyproject.toml
src/clawflow/: __init__.py  app.py  cli.py  config.py
src/clawflow/adapters/: __init__.py
src/clawflow/adapters/openclaw/: __init__.py  base.py  mock.py
src/clawflow/api/: __init__.py  app.py
src/clawflow/domain/: __init__.py  models.py
src/clawflow/services/: __init__.py  agent_allocator.py  intent_engine.py  monitoring.py  orchestrator.py  pipeline_store.py  scheduler.py  synthesizer.py  task_decomposer.py
src/clawflow/ui/: index.html
tests/: test_api.py  test_orchestrator.py
